After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663900 - totem-video-thumbnailer takes incorrect time argument
totem-video-thumbnailer takes incorrect time argument
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Thumbnailer
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-11-12 03:32 UTC by sadako
Modified: 2011-11-14 12:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description sadako 2011-11-12 03:32:31 UTC
The help text for totem-video-thumbnailer states:

-t, --time Choose this time (in seconds) as the thumbnail (can't be used with --gallery)

But the time argument actually needs to be in milliseconds. Either the program should be updated so seconds work, or the help text should be changed to match the program's actual function.
Comment 1 Bastien Nocera 2011-11-14 12:18:53 UTC
commit 633edcd971f6fec9e9cb614dba67c13ec63c95b9
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Nov 14 12:16:43 2011 +0000

    thumbnailer: Fix --time option
    
    We expect a seek time in seconds, but pass it on as milliseconds.
    
    Spotted by sadako@gmail.com
    
    https://bugzilla.gnome.org/show_bug.cgi?id=663900