thumbnailer: Fix --time option

We expect a seek time in seconds, but pass it on as milliseconds.

Spotted by sadako@gmail.com

https://bugzilla.gnome.org/show_bug.cgi?id=663900